# Partial-Differential-Equations-Visualizer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  var3.md
.github/workflows/: ci.yml
src/: Common.h  IC.h  main.cpp
src/parser/: Expr.hpp
src/renderer/: MathRender.hpp  Renderer.cpp  Renderer.h
src/solvers/: FourierViz.cpp  FourierViz.h  GreenSolver.cpp  GreenSolver.h  HeatSolver.cpp  HeatSolver.h  WaveSolver.cpp  WaveSolver.h
src/ui/: AppState.h  Panel.cpp  Panel.h  PlotState.h  Plotting.cpp  Plotting.h  Theme.cpp  Theme.h  Widgets.cpp  Widgets.h
